hphp/hack/test/typecheck/strict_wellformedness/require/req_extends2.php
<?hh

class C<T> {}

interface I {
  require extends C<this::TUndefined>;
}
